oss-knowledge-gitops/backend/task-planner/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: task-planner
spec:
    selector:
        app: task-planner
    ports:
        - port: 8004
          targetPort: 8004
    type: ClusterIP
